# spencer_people_tracking

classification/face_classifier/openface_classifier/: CMakeLists.txt
classification/face_classifier/openface_classifier/launch/: openface_classifier.launch
classification/face_classifier/openface_classifier/scripts/: call_person_by_name.py  classification_filter_node.py  classifier_node.py  data_associator_node.py  face_embedder_node.py  label_pose_service_node.py  trainer_node.py
classification/face_classifier/openface_classifier/src/: main.py  openface_helper.py
classification/face_classifier/openface_classifier/srv/: LabelPoseService.srv
detection/spencer_detected_person_association/scripts/: track_synchronizer.py
services/spencer_classification_srv/: CMakeLists.txt  package.xml
services/spencer_classification_srv/srv/: LabelPoseService.srv  TrackLabelAssociationService.srv
